# DIPLOMI-telegram-outreach-machine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
backend/: __init__.py
bot/: account_handlers.py  account_onboarding.py  api_client.py  api_client_accounts.py  api_client_engagement_admin.py  api_client_search.py  app.py  bridge.py  callback_handlers.py  callback_handlers_engagement.py  config.py  config_editing.py  discovery_handlers.py  display_policy.py  engagement_approval_flow.py  engagement_commands_admin.py  engagement_commands_config.py  engagement_commands_daily.py  engagement_commands_wizard.py  engagement_detail_flow.py  engagement_handlers.py  engagement_issue_flow.py  engagement_prompts_flow.py  engagement_review_flow.py  engagement_review_learning.py  engagement_rollout_flow.py  engagement_targets_flow.py  engagement_topics_flow.py  engagement_wizard_flow.py  engagement_wizard_join.py  engagement_wizard_target_flow.py  formatting.py  formatting_accounts.py  formatting_common.py  formatting_discovery.py  formatting_engagement.py  formatting_engagement_approval.py  formatting_engagement_detail.py  formatting_engagement_home.py  formatting_engagement_issue.py  (+26 more)
scripts/: check_fragmentation.py  git-ci.ps1  make_seed_csv.py  onboard_telegram_account.py  telegram_bridge_send.py  vps-agent-worktree.sh  vps-deploy-env.sh  vps-deploy.sh  vps-diagnostics.sh  vps-install-agent-ops.sh  vps-logs.sh  vps-status.sh
wiki/: index.md  (+3 more)
(+397 files in other folders)
