[project]
name = "telegram-community-discovery"
version = "0.1.0"
description = "Telegram community discovery and monitoring app"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "redis>=5.0",
  "rq>=1.16",
  "httpx>=0.27",
  "openai>=1.50",
  "telethon>=1.36",
  "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

